--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Portfolio</h1>
+    <article>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus beatae nam qui temporibus voluptatum autem, quod perspiciatis quae consequuntur omnis, laudantium fugit modi harum dolorum? Laborum expedita inventore quisquam.
+        </p>
+    </article>
 </body>
 </html>
